Fix align of portals

--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,6 @@ a {
 
 .portal {
   font-size: 1.5em;
-  text-align: center;
 }
 
 .portal a {
